testdata/baselines/reference/submodule/compiler/regularExpressionUnicodePropertyValueExpressionSuggestions(target=es2015).errors.txt
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,19): error TS1529: Unknown Unicode property name or value.
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,28): error TS1524: Unknown Unicode property name.
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,45): error TS1526: Unknown Unicode property value.
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,57): error TS1524: Unknown Unicode property name.
regularExpressionUnicodePropertyValueExpressionSuggestions.ts(1,93): error TS1526: Unknown Unicode property value.


==== regularExpressionUnicodePropertyValueExpressionSuggestions.ts (5 errors) ====
    const regex = /\p{ascii}\p{Sc=Unknown}\p{sc=unknownX}\p{Script_Declensions=Inherited}\p{scx=inherit}/u;
                      ~~~~~
!!! error TS1529: Unknown Unicode property name or value.
                               ~~
!!! error TS1524: Unknown Unicode property name.
                                                ~~~~~~~~
!!! error TS1526: Unknown Unicode property value.
                                                            ~~~~~~~~~~~~~~~~~~
!!! error TS1524: Unknown Unicode property name.
                                                                                                ~~~~~~~
!!! error TS1526: Unknown Unicode property value.
    